--- a/guest.html
+++ b/guest.html
@@ -352,7 +352,7 @@
       var password = passwordInput.value;
       writeGuestbookData(name, gender, message, password);
       nameInput.value = "";
-      genderInput.value = "신랑에게";
+      genderInput.value = "민석";
       messageInput.value = "";
       passwordInput.value = "";
     }
@@ -428,7 +428,7 @@
     <input type="text" id="name-input" placeholder="이름" required />
     <input type="password" id="password-input" placeholder="비밀번호" required /><br />
     <textarea id="message-input" type="text" style=" width: 100%;" placeholder="메시지" rows="2" required></textarea>
-    <button style=" width: 100%; type=" submit">작성</button>
+    <button style=" width: 100%;" type="submit">작성</button>
   </form>
 
   <div class="c-guestbook gothic">
