--- a/index.html
+++ b/index.html
@@ -661,18 +661,18 @@
                 <p class="tit02">150대 동시 주차 가능, 2시간 무료 주차</p>
               </div>
               <div class="box">
-                <h3 class="tit01">도보(10분)</h3>
-                <dl>⊙ 교대역 1번출구에서 오른쪽 방향 400m 이동<br />
-                    - 사임당로 17길에서 300m 이동 후 왼쪽<br />
+                <h3 class="tit01">도보 (10분)</h3>
+                <dl>교대역 1번출구에서 오른쪽 방향 400m 이동<br />
+                  사임당로 17길에서 좌로 250m 이동 후 도착<br />
               </div>
               <div class="box">
-                <h3 class="tit01">마을버스(3분)</h3>
-                <dl>⊙ 교대역(2호선) 2번 또는 5번 출구에서 마을버스 서초03 탑승<br />
-                    - [삼성레포트, 삼성금융캠퍼스] 정류장에서 하자 도보(10분)<br />
+                <h3 class="tit01">마을버스 (3분)</h3>
+                <dl>교대역(2호선) 5번 출구 앞에서 마을버스 서초03 탑승<br />
+                  [삼성레포츠] 정류장에서 하차(10분)<br />
               </div>
               <div class="box">
-                <h3 class="tit01">셔틀버스</h3>
-                <dl>⊙ 교대역 5번 출구 앞에서 15분 간격으로 운행<br />
+                <h3 class="tit01">셔틀버스 (3분)</h3>
+                <dl>교대역 5번 출구 앞에서 15분 간격으로 운행<br />
                 </dl>
               </div>
             </div>
@@ -1561,6 +1561,8 @@
     .contact-modal-wrap .content {
       padding: 1rem;
       display: block;
+      padding-bottom: 20px;
+
     }
 
 
