--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="ko">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-5RBWJRZX');</script>
+  <!-- End Google Tag Manager -->
+
   <meta charset="utf-8">
   <title>김민석 ♥ 이유선, 결혼합니다!</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -16,14 +27,8 @@
 
 
   <link rel="icon" type="image/png" href="./assets/dist/image/favicon-180x180.png">
-  <!--Favicons 
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/dist/image/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./assets/dist/image/favicon-16x16.png">-->
   <link rel="manifest" href="./assets/dist/image/site.webmanifest">
 
-
-  <!--<link href="https://fonts.googleapis.com/css?family=Noto+Serif+KR:400&display=swap" rel="stylesheet">-->
   <link href="./assets/dist/css/commons.css" rel="stylesheet">
   <link href="./assets/dist/css/fonts.css" rel="stylesheet">
   <link href="./assets/dist/css/swiper.min.css" rel="stylesheet">
@@ -87,20 +92,15 @@
 </head>
 
 <body class="banner" oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5RBWJRZX" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   <!-- wrap -->
   <div class="wrap">
 
-    <!-- head 
-    <header class="head">
-      <div class="inner">
-        <div class="h1Wrap">
-          <h1><a href="javascript:;">MIN SEOK & YOU SUN</a></h1>
-        </div>
-      </div>
-      <div class="backBg"></div>
-    </header>
-     //head -->
+
 
     <!-- container -->
     <div class="container" id="container">
