--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="format-detection" content="telephone=no">
-  <meta name="viewport"
-    content="user-scalable=yes, initial-scale=1.0, maximum-scale=1, minimum-scale=1.0, width=device-width">
+  <!-- <meta name="viewport" content="user-scalable=yes, initial-scale=1.0, maximum-scale=1, minimum-scale=1.0, width=device-width">-->
+
+
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta property="og:title" content="김민석 ♥ 이유선, 결혼합니다!">
   <meta property="og:description" content="23년 9월 23일 삼성금융캠퍼스로 초대드립니다 :)">
   <meta property="og:image" content="./assets/dist/gallery/m0_og_trans.jpg">
